--- a/movienight.html
+++ b/movienight.html
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <p><span>Your special comes with 4 tasty Items.</span></p>
-                        <p>x-Large Pizza(of your choice), a drink, Marinara dip sauce, 10 pieces of
+                        <p>x-Large Meat Supreme Pizza, a drink, Marinara dip sauce, 10 pieces of
                             of chicken wings
                         </p>
                     </div>
@@ -65,13 +65,18 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/happyfamily.jpg" class="card-img" alt="special" width="100%"
+                                <img src="images/meatsupreme.png" class="card-img" alt="special" width="100%"
                                     height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">HAPPY FAMILY</h5>
-                                    <a href="#"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">X-LARGE MEAT SUPREME PIZZA</h5>
+                                    <p class="card-text">Topped with classic pepperoni, bacon crumble, salami, spicy
+                                        Italian sausage, mozzarella cheese, and Italiano blend seasoning. For the
+                                        meat-lover in you.
+                                    </p>
+                                    <p class="card-text"><span>Starting from ksh. 1500/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
 
@@ -82,13 +87,30 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/coupleup.jpg" class="card-img" alt="special" width="100%"
+                                <img src="images/coke.png" class="card-img" alt="special" width="100%" height="250px">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">DRINK</h5>
+                                    <p class="card-text"><span>Starting from ksh. 160/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/marinara.png" class="card-img" alt="special" width="100%"
                                     height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">COUPLE-UP</h5>
-                                    <a href="#"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">MARINARA DIPPING SAUCE</h5>
+                                    <p class="card-text"><span>Starting from ksh. 200/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
 
@@ -98,28 +120,19 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/movie.jpg" class="card-img" alt="special" width="100%" height="250px">
+                                <img src="images/wings.jpg" class="card-img" alt="special" width="100%"
+                                    height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">MOVIE NIGHT</h5>
-                                    <a href="movienight.html"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">CHICKEN WINGS</h5>
+                                    <p class="card-text">Classic or crispy breaded? Mild or Hot? It's a wing-wing
+                                        situation!</p>
+                                    <p class="card-text"><span>Starting from ksh. 1500/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
-                        </div>
-                    </div>
 
-                    <div class="card mb-3">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <img src="images/veggie.jpg" class="card-img" alt="special" width="100%" height="220px">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">VEGGIE DINE</h5>
-                                    <a href="#"><button type="submit">VIEW</button></a>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
