--- a/veggiedine.html
+++ b/veggiedine.html
@@ -9,7 +9,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/all-for-you.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/veggiedine.css" rel="stylesheet" type="text/css" media="all">
     <title>J-PIZZA</title>
 </head>
 
@@ -39,8 +39,22 @@
     </nav>
 
     <div class="container-fluid" style="margin: 0px; padding: 0px;">
-        <div class="specialheader text-center">
-            <h1>ALL FOR YOU</h1>
+        <div class="specialheader">
+            <h1 class="text-center">VEGGIE DINE</h1>
+            <div class="specialheader2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><span>Your special comes with 4 tasty Items.</span></p>
+                        <p>Medium Mediteranean Vegeterian Pizza, a drink, BBQ dip sauce,
+                            5 pieces of buffalo chicken
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="card-text price">ksh. 2760/=</p>
+                        <a href=""><button type="button">ADD TO CART</button></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -51,13 +65,17 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/happyfamily.jpg" class="card-img" alt="special" width="100%"
-                                    height="250px">
+                                <img src="images/veggie.jpg" class="card-img" alt="special" width="100%" height="270px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">HAPPY FAMILY</h5>
-                                    <a href="#"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">LARGE MEDITERANEAN VEGETERIAN PIZZA</h5>
+                                    <p class="card-text">Topped with kalamata olives, broccoli, sun-dried tomatoes,
+                                        grilled zucchini, red onions, feta cheese and mozzarella cheese. A healthy
+                                        alternative.
+                                    </p>
+                                    <p class="card-text"><span>Starting from ksh. 1200/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
 
@@ -68,13 +86,14 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/coupleup.jpg" class="card-img" alt="special" width="100%"
-                                    height="250px">
+                                <img src="images/coke.png" class="card-img" alt="special" width="100%" height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">COUPLE-UP</h5>
-                                    <a href="#"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">DRINK</h5>
+                                    <p class="card-text"><span>Starting from ksh. 160/=</span></p>
+                                    <br><br><br>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
 
@@ -84,30 +103,39 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/movie.jpg" class="card-img" alt="special" width="100%"
+                                <img src="images/bbqsauce.webp" class="card-img" alt="special" width="100%"
                                     height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">MOVIE NIGHT</h5>
-                                    <a href="movienight.html"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">BBQ DIPPING SAUCE</h5>
+                                    <p class="card-text"><span>Starting from ksh. 200/=</span></p>
+                                    <br><br><br>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
+
                         </div>
                     </div>
 
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/veggie.jpg" class="card-img" alt="special" width="100%"
-                                    height="220px">
+                                <img src="images/buffalochicken.jpg" class="card-img" alt="special" width="100%"
+                                    height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">VEGGIE DINE</h5>
-                                    <a href="veggiedine.html"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">CHICKEN BITES</h5>
+                                    <p class="card-text">Craving chicken? Grab a bite! The perfect morsel of juicy,
+                                        all-white-meat chicken, served with the sauce of your choice. Comes in order of
+                                        10 or 20.
+                                    </p><br>
+                                    <p class="card-text"><span>Starting from ksh. 1200/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
