--- a/coupleup.html
+++ b/coupleup.html
@@ -9,7 +9,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/all-for-you.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/coupleup.css" rel="stylesheet" type="text/css" media="all">
     <title>J-PIZZA</title>
 </head>
 
@@ -39,8 +39,22 @@
     </nav>
 
     <div class="container-fluid" style="margin: 0px; padding: 0px;">
-        <div class="specialheader text-center">
-            <h1>ALL FOR YOU</h1>
+        <div class="specialheader">
+            <h1 class="text-center">COUPLE-UP</h1>
+            <div class="specialheader2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><span>Your special comes with 4 tasty Items.</span></p>
+                        <p>Medium pepperoni Pizza, a drink, Marinara dip sauce, 6 pieces of
+                            of chicken wings
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="card-text price">ksh. 2260/=</p>
+                        <a href=""><button type="button">ADD TO CART</button></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -51,13 +65,18 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/happyfamily.jpg" class="card-img" alt="special" width="100%"
+                                <img src="images/pepperoni.jpg" class="card-img" alt="special" width="100%"
                                     height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">HAPPY FAMILY</h5>
-                                    <a href="happyfamily.html"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">MEDIUM PEPPERONI PIZZA</h5>
+                                    <p class="card-text">The all-time favourite - It doesn't get any more iconic than
+                                        this. Savoury pepperoni, homestyle sauce, and ooey-gooey, stretchy mozzarella.
+                                        Perfection!
+                                    </p>
+                                    <p class="card-text"><span>Starting from ksh. 850/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
 
@@ -68,13 +87,13 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/coupleup.jpg" class="card-img" alt="special" width="100%"
-                                    height="250px">
+                                <img src="images/coke.png" class="card-img" alt="special" width="100%" height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">COUPLE-UP</h5>
-                                    <a href="coupleup.html"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">DRINK</h5>
+                                    <p class="card-text"><span>Starting from ksh. 160/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
 
@@ -84,30 +103,36 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/movie.jpg" class="card-img" alt="special" width="100%"
+                                <img src="images/marinara.png" class="card-img" alt="special" width="100%"
                                     height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">MOVIE NIGHT</h5>
-                                    <a href="movienight.html"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">MARINARA DIPPING SAUCE</h5>
+                                    <p class="card-text"><span>Starting from ksh. 200/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
+
                         </div>
                     </div>
 
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/veggie.jpg" class="card-img" alt="special" width="100%"
-                                    height="220px">
+                                <img src="images/wings.jpg" class="card-img" alt="special" width="100%"
+                                    height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">VEGGIE DINE</h5>
-                                    <a href="veggiedine.html"><button type="submit">VIEW</button></a>
+                                    <h5 class="card-title">CHICKEN WINGS</h5>
+                                    <p class="card-text">Classic or crispy breaded? Mild or Hot? It's a wing-wing
+                                        situation!</p>
+                                    <p class="card-text"><span>Starting from ksh. 1100/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
