--- a/happyfamily.html
+++ b/happyfamily.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="col-md-6">
                         <p class="card-text price">ksh. 3360/=</p>
-                        <a href=""><button type="button">ADD TO CART</button></a>
+                        <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                     </div>
                 </div>
             </div>
