--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link href="css/index.css" rel="stylesheet" type="text/css" media="all">
+  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
   <title>J-PIZZA</title>
 </head>
 
@@ -67,7 +68,7 @@
                     <p class="card-text">Medium 2-toppings pizza(Ksh.200/= each)</p>
                     <p>Additional charge for premium toppings. Minimum of 2 required</p><br>
                     <p class="price">Ksh. 1100/=</p>
-                    <button type="button"><a href="#">ORDER NOW</a></button>
+                    <a href="#"><button type="button">ORDER NOW</button></a>
                   </div>
                 </div>
               </div>
@@ -88,7 +89,7 @@
                       or Bites + a Drink(large) + 2 Dips</p>
                     <p>Additional charge for premium toppings</p>
                     <p class="price">Ksh. 2000/=</p>
-                    <button type="button"><a href="#">ORDER NOW</a></button>
+                    <a href="#"><button type="button">ORDER NOW</button></a>
                   </div>
                 </div>
               </div>
@@ -108,7 +109,7 @@
                       + 2 Dips. Upsize to large for Ksh, 600/=</p>
                     <p>Additional charge for premium toppings</p>
                     <p class="price">Ksh. 2200/=</p>
-                    <button type="button"><a href="#">ORDER NOW</a></button>
+                    <a href="#"><button type="button">ORDER NOW</button></a>
                   </div>
                 </div>
               </div>
@@ -300,6 +301,16 @@
           </a>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="cart">
+      <a href="cart.html">
+        <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+          Cart <span class="badge badge-light">0</span>
+        </button>
+      </a>
     </div>
   </div>
 
