--- a/wings.html
+++ b/wings.html
@@ -61,7 +61,7 @@
                                         order of crispy breaded wings.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1000/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
 
@@ -83,7 +83,7 @@
                                         10 or 20.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 950/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
 
