--- a/cart.html
+++ b/cart.html
@@ -9,14 +9,15 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/dip.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/index.css" rel="stylesheet" type="text/css" media="all">
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     <title>J-PIZZA</title>
 </head>
 
 <body class="container-fluid" style="padding: 0; margin: 0;">
 
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand logo" href="index.html">J-PIZZA
+        <a class="navbar-brand logo" href="#">J-PIZZA
             <p>Come Hungry Leave Happy</p>
         </a>
 
@@ -38,47 +39,13 @@
         </div>
     </nav>
 
-    <div class="container-fluid" style="margin: 0px; padding: 0px;">
-        <div class="specialheader text-center">
-            <h1>DIPS</h1>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="special-column">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card mb-3">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <img src="images/dipit.jpg" class="card-img" alt="special" width="100%"
-                                    height="250px">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">DIPPING SAUCE</h5>
-                                    <p class="card-text">Want to amp up the flavour of your pizza even more? Dip your
-                                        hot, fresh slice in one of our delicious sauces. We've got so many to choose
-                                        from, the possibilities are (almost) endless.?
-                                    </p>
-                                    <p class="card-text"><span>Starting from ksh. 100/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <footer class="page-footer">
         <div class="container-fluid" style="padding: 0px; margin: 0px;">
             <div class="footer">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="logo">J-PIZZA
+                        <div class="logo" href="#">J-PIZZA
                             <p>Come Hungry Leave Happy</p>
                         </div>
                     </div>
@@ -100,6 +67,7 @@
         </div>
     </footer>
 
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -109,6 +77,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 
