--- a/crust.html
+++ b/crust.html
@@ -61,7 +61,7 @@
                                         pizza. Enjoy!
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 300/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
 
@@ -82,7 +82,7 @@
                                         for your pizza.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 300/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
 
@@ -102,7 +102,7 @@
                                         for your pizza.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 300/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
                         </div>
