--- a/drinks.html
+++ b/drinks.html
@@ -9,7 +9,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/movienight.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/coupleup.css" rel="stylesheet" type="text/css" media="all">
     <title>J-PIZZA</title>
 </head>
 
@@ -40,42 +40,47 @@
 
     <div class="container-fluid" style="margin: 0px; padding: 0px;">
         <div class="specialheader">
-            <h1 class="text-center">MOVIE NIGHT</h1>
+            <h1 class="text-center">COUPLE-UP</h1>
             <div class="specialheader2">
                 <div class="row">
                     <div class="col-md-6">
                         <p><span>Your special comes with 4 tasty Items.</span></p>
-                        <p>x-Large Meat Supreme Pizza, a drink, Marinara dip sauce, 10 pieces of
+                        <p>Medium pepperoni Pizza, a drink, Marinara dip sauce, 6 pieces of
                             of chicken wings
                         </p>
                     </div>
                     <div class="col-md-6">
-                        <p class="card-text price">ksh. 3360/=</p>
-                        <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                        <p class="card-text price">ksh. 2260/=</p>
+                        <a href=""><button type="button">ADD TO CART</button></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container">
+
+    <div id="show1">trial1</div>
+    <p id="greet"> hae</p>
+    <div class="show2">trial2</div>
+
+    <div class="container trial1">
         <div class="special-column">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/meatsupreme.png" class="card-img" alt="special" width="100%"
+                                <img src="images/pepperoni.jpg" class="card-img" alt="special" width="100%"
                                     height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">X-LARGE MEAT SUPREME PIZZA</h5>
-                                    <p class="card-text">Topped with classic pepperoni, bacon crumble, salami, spicy
-                                        Italian sausage, mozzarella cheese, and Italiano blend seasoning. For the
-                                        meat-lover in you.
+                                    <h5 class="card-title">MEDIUM PEPPERONI PIZZA</h5>
+                                    <p class="card-text">The all-time favourite - It doesn't get any more iconic than
+                                        this. Savoury pepperoni, homestyle sauce, and ooey-gooey, stretchy mozzarella.
+                                        Perfection!
                                     </p>
-                                    <p class="card-text"><span>Starting from ksh. 1500/=</span></p>
+                                    <p class="card-text"><span>Starting from ksh. 850/=</span></p>
                                     <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
@@ -120,15 +125,80 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/wings.jpg" class="card-img" alt="special" width="100%"
-                                    height="250px">
+                                <img src="images/wings.jpg" class="card-img" alt="special" width="100%" height="250px">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">CHICKEN WINGS</h5>
                                     <p class="card-text">Classic or crispy breaded? Mild or Hot? It's a wing-wing
                                         situation!</p>
-                                    <p class="card-text"><span>Starting from ksh. 1500/=</span></p>
+                                    <p class="card-text"><span>Starting from ksh. 1100/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" id="trial2">
+        <div class="special-column">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/pepperoni.jpg" class="card-img" alt="special" width="100%"
+                                    height="250px">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">MEDIUM PEPPERONI PIZZA</h5>
+                                    <p class="card-text">The all-time favourite - It doesn't get any more iconic than
+                                        this. Savoury pepperoni, homestyle sauce, and ooey-gooey, stretchy mozzarella.
+                                        Perfection!
+                                    </p>
+                                    <p class="card-text"><span>Starting from ksh. 850/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/coke.png" class="card-img" alt="special" width="100%" height="250px">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">DRINK</h5>
+                                    <p class="card-text"><span>Starting from ksh. 160/=</span></p>
+                                    <a href="#"><button type="submit">REMOVE</button></a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="images/wings.jpg" class="card-img" alt="special" width="100%" height="250px">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">CHICKEN WINGS</h5>
+                                    <p class="card-text">Classic or crispy breaded? Mild or Hot? It's a wing-wing
+                                        situation!</p>
+                                    <p class="card-text"><span>Starting from ksh. 1100/=</span></p>
                                     <a href="#"><button type="submit">REMOVE</button></a>
                                 </div>
                             </div>
@@ -167,6 +237,14 @@
         </div>
     </footer>
 
+    <script>
+        $(document).ready(function(){
+ $("#show1").click(function(){
+    $("#greet").hide();
+ });
+});
+    </script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -176,6 +254,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 
