--- a/special.html
+++ b/special.html
@@ -58,7 +58,7 @@
                                     <h5 class="card-title">UNLIMITED MEDIUM 2-TOPPING PIZZAS</h5>
                                     <p class="card-text">Medium 2-topping pizza</p>
                                     <p class="card-text"><span>Starting from ksh. 1100/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
 
@@ -76,7 +76,7 @@
                                     <h5 class="card-title">2-LARGE PIZZAS + A DRINK</h5>
                                     <p class="card-text">2 Large Pizzas with 4 toppings combined, a Drink and 2 Dips</p>
                                     <p class="card-text"><span>Starting from ksh. 2800/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
 
@@ -93,7 +93,7 @@
                                     <h5 class="card-title">LARGE PIZZA + A DRINK</h5>
                                     <p class="card-text">Large 3-topping pizza, 10pcs wings, a Drinks and 2 dips</p>
                                     <p class="card-text"><span>Starting from ksh. 2000/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                                     <h5 class="card-title">2-MEDIUM PIZZAS + A DRINK</h5>
                                     <p class="card-text">2 medium pizzas with 4 toppings combined, a Drinks and 2 dips
                                     <p class="card-text"><span>Starting from ksh. 2200/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
                         </div>
