--- a/veggiepizzas.html
+++ b/veggiepizzas.html
@@ -62,7 +62,7 @@
                                         mozzarella on a whole grain crust.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
 
@@ -84,7 +84,7 @@
                                         cheese and mozzarella. What's not to love?
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1000/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
 
@@ -104,7 +104,7 @@
                                         onions, green peppers, mushrooms, and topped with chili flakes and cilantro.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                                         alternative.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1600/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                                         cheese. Tip: Try customizing to a thick crust.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1200/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
                                 </div>
                             </div>
                         </div>
