--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <div class="cart">
       <a href="cart.html">
         <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-          Cart <span class="badge badge-light">0</span>
+          Cart <span>0</span>
         </button>
       </a>
     </div>
