--- a/veggiepizzas.html
+++ b/veggiepizzas.html
@@ -62,7 +62,7 @@
                                         mozzarella on a whole grain crust.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <a href="#"  class="add-cart"><button type="button">ADD TO CART</button></a>
                                 </div>
                             </div>
 
@@ -154,6 +154,16 @@
         </div>
     </div>
 
+    <div class="container-fluid">
+        <div class="cart">
+          <a href="cart.html">
+            <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+              Cart <span>0</span>
+            </button>
+          </a>
+        </div>
+      </div>
+
     <footer class="page-footer">
         <div class="container-fluid" style="padding: 0px; margin: 0px;">
             <div class="footer">
@@ -181,6 +191,8 @@
         </div>
     </footer>
 
+
+    <script src="js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -190,7 +202,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+
 </body>
 
 </html>
