--- a/dip.html
+++ b/dip.html
@@ -62,7 +62,7 @@
                                         from, the possibilities are (almost) endless.?
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 100/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
