--- a/gourmetthins.html
+++ b/gourmetthins.html
@@ -62,7 +62,7 @@
                                         seasoning, goat cheese, mozzarella and Thai sweet chili sauce.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 800/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
@@ -85,7 +85,7 @@
                                         cheese.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 950/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
@@ -106,7 +106,7 @@
                                         mozzarella and pesto sauce.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 850/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +126,7 @@
                                         mozzarella cheese.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 700/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
