--- a/meatpizzas.html
+++ b/meatpizzas.html
@@ -62,7 +62,7 @@
                                         Perfection!
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
@@ -84,7 +84,7 @@
                                         and mozzarella cheese.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1000/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
@@ -105,7 +105,7 @@
                                         peppers, and mozzarella cheese.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                                         meat-lover in you.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
                                         cheese. Tip: Try customizing to a thick crust.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                                         cheese, mozzarella cheese and sweet chili Thai sauce.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1050/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
