--- a/veggiedine.html
+++ b/veggiedine.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="col-md-6">
                         <p class="card-text price">ksh. 2760/=</p>
-                        <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                        <button type="submit" class="add-cart">ADD TO CART</button>
                     </div>
                 </div>
             </div>
