--- a/wings.html
+++ b/wings.html
@@ -61,7 +61,7 @@
                                         order of crispy breaded wings.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 1000/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
@@ -83,7 +83,7 @@
                                         10 or 20.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 950/=</span></p>
-                                    <a href="#"  class="add-cart"><button type="submit">ADD TO CART</button></a>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
 
@@ -103,7 +103,7 @@
                                         situation!
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 550/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                                         order of crispy breaded wings.
                                     </p>
                                     <p class="card-text"><span>Starting from ksh. 999/=</span></p>
-                                    <button type="submit"><a href="#">ADD TO CART</a></button>
+                                    <button type="submit" class="add-cart">ADD TO CART</button>
                                 </div>
                             </div>
                         </div>
