--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body class="container-fluid" style="padding: 0; margin: 0;">
 
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar sticky-top navbar-expand-lg">
     <a class="navbar-brand logo" href="#">J-PIZZA
       <p>Come Hungry Leave Happy</p>
     </a>
@@ -31,6 +31,14 @@
         <li class="nav-item offer">
           <a class="nav-link" href="#">ANDY 1/1</a>
         </li>
+
+        <li class="cart">
+          <a href="cart.html">
+            <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+              Cart <span>0</span>
+            </button>
+          </a>
+      </li>
 
         <li class="nav-item accountuser">
           <a class="nav-link" href="#"><img src="images/user.png" alt="user">SignIn<br>Create Account</a>
@@ -301,16 +309,6 @@
           </a>
         </div>
       </div>
-    </div>
-  </div>
-
-  <div class="container-fluid">
-    <div class="cart">
-      <a href="cart.html">
-        <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-          Cart <span>0</span>
-        </button>
-      </a>
     </div>
   </div>
 
