--- a/veggiepizzas.html
+++ b/veggiepizzas.html
@@ -15,7 +15,7 @@
 
 <body onLoad = "onLoadCartNumbers();" class="container-fluid" style="padding: 0; margin: 0;">
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar sticky-top navbar-expand-lg">
         <a class="navbar-brand logo" href="index.html">J-PIZZA
             <p>Come Hungry Leave Happy</p>
         </a>
@@ -29,6 +29,14 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item offer">
                     <a class="nav-link" href="#">ANDY 1/1</a>
+                </li>
+                
+                <li class="cart">
+                    <a href="cart.html">
+                      <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                        Cart <span>0</span>
+                      </button>
+                    </a>
                 </li>
 
                 <li class="nav-item accountuser">
@@ -155,13 +163,7 @@
     </div>
 
     <div class="container-fluid">
-        <div class="cart">
-          <a href="cart.html">
-            <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              Cart <span>0</span>
-            </button>
-          </a>
-        </div>
+        
       </div>
 
     <footer class="page-footer">
