--- a/drinks.html
+++ b/drinks.html
@@ -15,7 +15,7 @@
 
 <body class="container-fluid" style="padding: 0; margin: 0;">
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar sticky-top navbar-expand-lg">
         <a class="navbar-brand logo" href="index.html">J-PIZZA
             <p>Come Hungry Leave Happy</p>
         </a>
@@ -238,11 +238,7 @@
     </footer>
 
     <script>
-        $(document).ready(function(){
- $("#show1").click(function(){
-    $("#greet").hide();
- });
-});
+  
     </script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
